syntax = "proto3";

option csharp_namespace = "AuthProto";

package AuthProto;

service AuthGrpc {
	rpc Login (LoginDto) returns (Token);
	rpc ValidateSession (RequiredPermissions) returns (UserClaims);
}

message LoginDto {
	string email = 1;
	string password = 2;
}

message Token {
	string token = 1;
}

message RequiredPermissions { 
	repeated string permissions = 1;
}

message UserClaims {
	string id = 1;
	string email = 2;
	repeated string permissions = 3;
}